creusot/tests/should_fail/prusti/invalid_state/old_logic.stderr
error: 'pre can only be used in specifications of program functions
 --> old_logic.rs:6:5
  |
6 |     old(x)
  |     ^^^^^^

error: aborting due to 1 previous error

